initial works on new facility type

--- a/localisation/english/PB_Technologies_l_english.yml
+++ b/localisation/english/PB_Technologies_l_english.yml
@@ -314,6 +314,7 @@
  heli_techs_folder:0 "Heli Support"
  heli_techs_folder_desc:0 "Heli Support"
 
+ combatagate:0 "Combatagate Primordiforms"
  combatagate_arch:0 "Combatagates"
  combatagate_1:0 "Combatagate Primordiforms"
  combatagate_1_desc:0 "Created in the 1920s due to failed cattle yield experiments, Combatagates function as biological shock cavalry. The creatures are released on the enemy in a highly agitated state, and after between twelve to fourteen hours will die from organ failure via an imprinted biological timer, requiring little cleanup or need for extermination."
@@ -396,15 +397,21 @@
  special_forces_jet_troopers_6:0 "Long Range Thermal Scanners"
  special_forces_jet_troopers_6_desc:0 "With Long Range Thermal Scanners no enemy will be able to hide from our Jump Troopers, no matter how far, small, or cold they may be."
 
- power_armor:0 "Hardsuits"
- razormaiden:0 "Razormaidens" 
+ cat_augmented_humans: "Augmented Humans"
+ cat_hardsuits:0 "Hardsuits"
+ cat_razormaidens:0 "Razormaidens" 
+ cat_amalgamate: "Amalgamates"
+ cat_jet_troopers: "Jet Troopers"
 
  dependencies_x:0 "Is allowed to research this tech"
  dependencies_clone_troopers:0 "Has Completed the Associated Special Project"
- dependencies_primordimorphs:0 "Has Completed the Associated Area Zero Project"
 
  special_project_primordiform:0 "Primordiform Amalgamates"
  special_project_primordiform_desc:0 "Traditionally, primates or primate adjacent species are avoided when mixing genetics. Frankly this is short-sighted and unimaginative, and thus the Primordiform was born. An unholy union of ape, human and mutated DNA, these armed creatures are exceptional shock cavalry."
+ primordiform_bonobo: "Bonobo genome based Primordiforms"
+ primordiform_chimpanzee: "Chimpanzee genome based Primordiforms"
+ primordiform_bonobo_tt: "$special_project_primordiform$\n Initiative: +10%\n Organization: +10%\n Reliability: +15%"
+ primordiform_chimpanzee_tt: "$special_project_primordiform$\n Attack: +10%\n Defense: +10%\n Breakthrough: +15%"
 
  clone_vats_archetype:0 "Replicated Biomass"
  clone_vats_archetype_desc:0 "The dream of any military is a soldier who is willing to accept any order without question. With modern science, we can achieve this dream, at least to some extent. Replicoids are functionally lobotomized of higher brain functions, but they retain enough intelligence to follow any order, no matter how ridiculous.\n\nWith this, we can supplement divisions with disposable lobotomites and focus on a higher quality core military."
