--- a/localisation/english/PB_buildings_l_english.yml
+++ b/localisation/english/PB_buildings_l_english.yml
@@ -1,13 +1,25 @@
 ﻿l_english:
  infrastructure:0 "Infrastructure"
  infrastructure_plural:0 "Infrastructure"
- infrastructure_desc:0 "This building provides the state with improvement of infrastructure. It increases your supply power in strategic regions and increases your divisions' speed."
+ infrastructure_desc:0 "This building provides the state with improvement of infrastructure. It increases your supply power in strategic regions and increases your divisions' speed, as well as increasing your raw resource extraction."
  arms_factory:0 "Arms Factory"
  arms_factory_plural:0 "Arms Factories"
  arms_factory_desc:0 "This building provides the state with industry for production of new military equipment. Can be converted to civilian industry if needed."
  dockyard:0 "Naval Dockyard"
  dockyard_plural:0 "Naval Dockyards"
  dockyard_desc:0 "This building provides the state with industry for building new ships."
+ dam: "Dam"
+ dam_plural: "Dams"
+ dam_desc: "Dams provide additional power to a state, improving industry and resource output."
+ dam_mountain: "$dam$"
+ dam_mountain_plural: "$dam_plural$"
+ dam_mountain_desc: "$dam_desc$"
+ canal_kiel: "Kiel Canal Locks"
+ canal_kiel_plural: "$canal_kiel$"
+ canal_kiel_desc: "The Kiel Canal Locks are needed in place in order for the canal to operate at full capacity, and destroying them would hinder shipping and movement for a long time."
+ canal_panama: "Panama Canal Locks"
+ canal_panama_plural: "$canal_panama$"
+ canal_panama_desc: "The Panama Canal Locks are needed in place in order for the canal to operate at full capacity, and destroying them would hinder shipping and movement for a long time."
  industrial_complex:0 "Industrial Complex"
  industrial_complex_plural:0 "Industrial Complexes"
  industrial_complex_desc:0 "This building provides the state with industry for production of civilian goods or construction of new buildings. Can be converted to military industry if needed."
@@ -29,7 +41,7 @@
  synthetic_refinery:0 "Synthetic Refinery"
  synthetic_refinery_plural:0 "Synthetic Refineries"
  #synthetic_refinery_desc:0 "This building provides the state with +1 £resources_strip|3 and +2 £resources_strip|1."
- synthetic_refinery_desc:0 "This building provides the state with additional"
+ synthetic_refinery_desc:0 "This building provides the state with"
  synthetic_refinery_amount:0 "$VALUE|Y0=$"
  synthetic_refinery_resource:0 "£resources_strip|$FRAME$"
  radar_station:0 "Radar Station"
@@ -38,71 +50,54 @@
  rocket_site:0 "Rocket Site"
  rocket_site_plural:0 "Rocket Sites"
  rocket_site_desc:0 "This building provides the state with deployment for produced rockets."
+ nuclear_reactor_heavy_water: "Heavy Water Nuclear Reactor"
+ nuclear_reactor_heavy_water_plural: "Heavy Water Nuclear Reactors"
+ nuclear_reactor_heavy_water_desc: "This building provides the state with production of enriched Uranium for use in Nuclear weapons.\nNuclear reactors using Heavy Water are somewhat cheaper to build than Graphite Reactors, but produce less material that can be used to produce nuclear weapons."
  nuclear_reactor:0 "Nuclear Reactor"
  nuclear_reactor_plural:0 "Nuclear Reactors"
  nuclear_reactor_desc:0 "This building provides the state with production of enriched Uranium for use in Nuclear weapons."
+ commercial_nuclear_reactor: "Civilian Nuclear Reactor"
+ commercial_nuclear_reactor_plural: "Civilian Nuclear Reactors"
+ commercial_nuclear_reactor_desc: "This building provides the state with enriched uranium for nuclear weapons and produces electricity for the civilian economy."
+ nuclear_facility: "Nuclear Research Facility"
+ nuclear_facility_plural: "Nuclear Research Facilities"
+ nuclear_facility_desc: "Experimental Facilities for Nuclear Research allow you to start research projects relating to the use nuclear power."
+ air_facility: "Aerodynamics and Avionics Facility"
+ air_facility_plural: "Aerodynamics and Avionics Facilities"
+ air_facility_desc: "Experimental Facilities for Aerodynamics and Avionics allow you to start research projects for aircraft, rockets and related electronics."
+ naval_facility: "Naval Engineering Facility"
+ naval_facility_plural: "Naval Engineering Facilities"
+ naval_facility_desc: "Experimental Facilities for Naval Engineering allow you to start research projects related to Surface Ships and Submarines.\nA Naval Engineering can only be created in a coastal province."
+ mega_gun_emplacement: "Multi-Charge Large Caliber Gun"
+ mega_gun_emplacement_plural: "Multi-Charge Caliber Guns"
+ mega_gun_emplacement_desc: "Operating on the principle of multi-charge propulsion, this large caliber gun is designed to achieve unparalleled ranges in bombardment. Utilizing a series of underground tunnels, it accelerates shells to supersonic speeds before launching them towards distant targets."
+ stronghold_network: "Stronghold Network"
+ stronghold_network_plural: "Stronghold Networks"
+ stronghold_network_desc: "An extensive defensive system of massive bunkers and strongly fortified positions, designed to repel enemy advances and secure key strategic areas."
+ land_facility: "Land Warfare Facility"
+ land_facility_plural: "Land Warfare Facilities"
+ land_facility_desc: "Experimental Facilities for Land Warfare  allow you to start research projects related to various aspects of land warfare, such as special tanks, or artillery."
+ biochem_facility: "Bioengineering and Chemistry Facility"
+ biochem_facility_plural: "Bioengineering and Chemistry Facilities"
+ biochem_facility_desc: "Experimental Facilities for Bioengineering and Chemistry  allow you to start research projects related living organism, chemical compunds and augmentation."
+
  farm:0 "Agroponics Complex"
+ farm_plural:0 "Agroponics Complexes"
  farm_desc:0 "This building improves the food situation of the surrounding state, granting additional agriculture resources."
- medical_center:0 "Medical Facilities"
+ medical_center:0 "Medical Center"
+ medical_center_plural:0 "Medical Centers"
  medical_center_desc:0 "This building improves the medical situation of the surrounding state, requiring some weekly manpower for upkeep but decreasing the experience units lose upon taking damage"
  research_center:0 "Research Campus"
+ research_center_plural:0 "Research Campuses"
  research_center_desc:0 "This building improves the scientific situation of the surrounding state, requiring some weekly manpower for staffing and upkeep and providing a small research bonus"
  colonial_outpost:0 "Colonial Outpost"
  colonial_outpost_desc:0 "This building helps to recruit local forces for our cause, requiring some weekly manpower for staffing and upkeep but increasing local non core manpower."
  steel_mill:0 "Synthetic Mineral Fabricator"
+ steel_mill_plural:0 "Synthetic Mineral Fabricators"
  steel_mill_desc:0 "This building produces small amounts of synthetic mineral resources, specialized via technology research."
- rubber_plantation:0 "Rubber Plantation"
- rubber_plantation_desc:0 "This building produces rubber for the surrounding area, requiring some local manpower for staffing and upkeep.\n"
- forced_labour_camp:0 "Forced Labour Facilities"
- forced_labour_camp_desc:0 "This building uses the local labour pool to extract resources from the environment through coercive methods, requiring significant weekly manpower for upkeep."
- secret_police_office:0 "Secret Police Office"
- secret_police_office_desc:0 "This building reduces local manpower, but decreases the overall national growth of resistance groups by expanding the reach of our national security services."
- propaganda_office:0 "Propaganda Ministry"
- propaganda_office_desc:0 "This building reduces local manpower, but increases overall national war support"
- intelligence_agency:0 "Intelligence Ministry"
- intelligence_agency_desc:0 "This building reduces local manpower, but increases the operative capacity of our national intelligence agency"
  tesla_tower:0 "Tesla Tower"
+ tesla_tower_plural:0 "Tesla Towers"
  tesla_tower_desc:0 "This building allows a state to be connected to the Global Wireless Network, a system designed to allow for easily accessible wireless power. States that are not connected to the network suffer penalties to industrial capacity and supply."
- BUILDING_BOMBED:0 "$BUILDING$ bombed!"
- BUILDING_SABOTAGED:0 "$BUILDING$ sabotaged!"
- BUILDING_REPAIRED:0 "$BUILDING$ repaired!"
- BUILDING_DAMAGE_REASON_COLLATERAL:0 "$BUILDING$ suffered collateral damage!"
- NUKE_DROPPED:0 "Nuclear bomb dropped!"
- BUILDING_DAMAGED:0 "Damaged levels: $DAMAGED|-$/$CURRENT|H$"
- CAPACITY:0 "$VAL$/$MAX$"
- CAPACITY_PLUS:0 "$VAL$+$PLUS$/$MAX$"
- AIR_BASE_LEVEL:0 "$NAME|H$: $VAL|Y$"
- AIR_BASE_LEVEL_UNKNOWN:0 "$NAME|H$"
- ROCKET_SITE_CAPACITY:0 "Capacity: $VAL$/$MAX$"
- NAVAL_BASE_LEVEL_UNKNOWN:0 "§YNaval base§!"
- NAVAL_BASE_LEVEL:0 "§YNaval base§!: $VAL|Y$"
- NAVAL_BASE_SUPPLY_LIMIT:0 "Supply throughput limit: $VAL|Y$"
- NAVAL_BASE_CAPACITY:0 "Capacity: $USED|1G$/$TOTAL|0G$"
- NAVAL_BASE_CAPACITY_OVER:0 "Capacity: $USED|1R$/$TOTAL|0R$"
- NAVAL_BASE_CAPACITY_PENALTY:0 "Repair power capacity penalty: $PENALTY|%0R$"
- BUILDING_LEVEL:1 "§TState level: $LEVEL|H$§!"
- BUILDING_CURRENT_MAX_LEVEL_CAPPED:0 "Building current max level limited by:"
- BUILDING_CURRENT_MAX_LEVEL_NONCAPPED:0 "Building current max level is not limited."
- BUILDING_CURRENT_MAX_LEVEL_CAPPED_MANPOWER:0 "State population: $MANPOWER|*Y$"
- BUILDING_CURRENT_MAX_LEVEL_CAPPED_POP_PER_LEVEL:0 "Population per building level: $POPLEVEL|*Y$"
- BUILDING_CURRENT_MAX_LEVEL_CAPPED_BUILDING_MAX_FACTOR:0 "State max factor: $MAXFACTOR|%0Y$"
- BUILDING_CURRENT_MAX_LEVEL_CAPPED_MIN_MAXLEVEL:0 "Min max level due to population: $MAXLEVEL|Y$"
- BUILDING_SLOT_REMOVE_BUILDING_LEVEL:0 "Remove the building."
- BUILDING_SLOT_REMOVE_CONSTRUCTION_LEVEL:0 "Remove a construction level of the building."
- BUILDING_SLOT_REMOVE_CONVERSION_LEVEL:0 "Revert the building conversion."
- BUILDING_SLOT_REMOVE_COOLDOWN:0 "In wartimes it's only possible to remove buildings once every $DAYS|Y$ days. Next removal can be done at $DATE|Y$."
- CLICK_TO_CONVERT:1 "§GClick§! to convert to $BUILDING|Y$"
- INSERT_CONVERSION:0 "§GCtrl+Click§! to convert and place at the beginning of the queue.\n§GAlt+Click§! to convert and place at the end of the queue."
- INSERT_CONSTRUCTION:0 "§GCtrl+Click§! to build and place at the beginning of the queue.\n§GAlt+Click§! to build and place at the end of the queue."
- BUILDING_CURRENT_MAX_LEVEL:0 "Max level for $BUILDING|Y$: $MAXLEVEL|Y$"
- BUILDING_CURRENT_MAX_LEVEL_SHARED_SLOTS:0 "Max $BUILDING|Y$ in a State: $MAXLEVEL|Y$"
- BUILDING_LEVEL_HEALTH:0 "Level health: $VALUE|%2Y$"
- AIR_DEFENSE_IN_STATE:1 "\n§HIndustry bombing damage reduction:§! $TOT_INDUSTRY|%G$\n§HOther bombing damage reduction:§! $TOT|%G$\nAnti-Air: $AA|-%$\n"
- RADAR_ONMAP_TOOLTIP:0 "§HRadar station§! level: $LVL|G$/$TOT|H$\nBelongs to: $WHO|H$"
- RADAR_ONMAP_DAMAGED_TOOLTIP:0 "§HRadar station§! level: $LVL|R$/$TOT|H$\nBelongs to: $WHO|H$"
- RADAR_ONMAP_TOOLTIP_COVERAGE:0 "\n§HRegions coverage:§!"
- RADAR_ONMAP_TOOLTIP_COVERAGE_ENTRY:0 "\n  $PERC|%$ in $REGION$"
- RADAR_ONMAP_TOOLTIP_SUPPRESS:0 "\nHold §GCtrl§! to §Rsuppress§! this tooltip."
  fuel_silo:0 "Fuel Silo"
  fuel_silo_plural:0 "Fuel Silos"
  fuel_silo_desc:0 "This building provides your nation with more room for stockpiling §HFuel§!."
