--- a/localisation/english/PB_Modifiers_l_english.yml
+++ b/localisation/english/PB_Modifiers_l_english.yml
@@ -30,8 +30,10 @@ modifier_production_speed_medical_center_factor:0 "£GFX_industry_texticon §YMe
 modifier_production_speed_medical_center_factor_desc:0 "Modifies the speed of Medical Center construction."
 modifier_production_speed_steel_mill_factor:0 "£GFX_industry_texticon §YSteel Mill§! construction speed"
 modifier_production_speed_steel_mill_factor_desc:0 "Modifies the speed of Steel Mill construction."
-modifier_production_speed_farm_mill_factor:0 "£GFX_industry_texticon §YAgroponics Complex§! construction speed"
-modifier_production_speed_farm_mill_factor_desc:0 "Modifies the speed of Agroponics Complex construction."
+
+modifier_production_speed_biochem_facility_factor:0 "§YBioengineering and Chemistry Facility§! construction speed"
+modifier_production_speed_biochem_facility_factor_desc:0 "Modifies the speed of Bioengineering and Chemistry Facility construction."
+production_speed_biochem_facility_factor_tt: " $modifier_production_speed_biochem_facility_factor$: $RIGHT|+=%1$"
 
 modifier_experience_gain_clone_troopers_combat_factor:0 "Replicoid Trooper Experience Gain from Combat"
 
