--- a/localisation/english/PB_country_specific/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_United_Commonwealth_l_english.yml
@@ -2523,6 +2523,7 @@ PB_Idea_FSA_War_of_Independence:0 "War against Tyranny"
 # Country Flags
 Bleeding_South_Disabled:0 "The Bleeding South Is Not Active"
 Bleeding_South_Enabled:0 "The Bleeding South Is Active"
+PB_AME_Tuskegee_Program_Finalized: "§HTuskegee Program§! is finalized."
 
 
 
