--- a/localisation/english/PB_special_projects_l_english.yml
+++ b/localisation/english/PB_special_projects_l_english.yml
@@ -4,6 +4,12 @@
  specialization_biochem_short: "Biochem"
 
 ##########################
+  ### LAND PROJECTS ###
+##########################  
+ sp_land_jet_trooper_suit: "Jet Trooper Suit"
+ sp_land_jet_trooper_suit_desc: " "
+
+##########################
   ### BIOCHEM PROJECTS ###
 ##########################  
   sp_biochem_combatagates_development: "Development of Combatagates"
@@ -72,4 +78,20 @@ sp_biochem_materiosynthetic_metal_choice_reward_neither: "Focus on Neither"
  materiosynthesis_focus_on_neither_tt: "§YMaterosynthesis Technology§! output will not change"
  materiosynthesis_focus_on_common_metals_tt: "Each §YMaterosynthesis Technology§! will produce:\n§Y+1 $PRODUCTION_MATERIALS_STEEL$§!\n§Y+1 $PRODUCTION_MATERIALS_ALUMINIUM$§!"
  materiosynthesis_focus_on_rare_metals_tt: "Each §YMaterosynthesis Technology§! will produce:\n§Y+1 $PRODUCTION_MATERIALS_CHROMIUM$§!\n§Y+1 $PRODUCTION_MATERIALS_TUNGSTEN$§!"
+
+
+ ###### TRAITS ########
+
+ scientist_trait_bioengineering_expert: "Bioengineering Expert"
+ scientist_trait_bioengineering_expert_desc: " "
+ scientist_trait_chemistry_expert: "Chemistry Expert"
+ scientist_trait_chemistry_expert_desc: " "
+ scientist_trait_industry_expert: "Industry Expert"
+ scientist_trait_industry_expert_desc: " "
+ scientist_trait_amalgamate_expert: "Amalgamates Expert"
+ scientist_trait_amalgamate_expert_desc: " "
+ scientist_trait_augmentation_expert: "Augmentation Expert"
+ scientist_trait_augmentation_expert_desc: " "
+ scientist_trait_microbes_expert: "Microbes Expert"
+ scientist_trait_microbes_expert_desc: " "
  
