--- a/localisation/english/PB_focus_filters_l_english.yml
+++ b/localisation/english/PB_focus_filters_l_english.yml
@@ -13,7 +13,7 @@
  FOCUS_FILTER_IMPERIAL_TENSION: "Imperial Tension"
  FOCUS_FILTER_HAIG_TORIES: "Haig Tories"
  FOCUS_FILTER_PROG_TORIES: "Progressive Tories"
- FOCUS_FILTER_WHIGHS: "Whigs"
+ FOCUS_FILTER_WHIGS: "Whigs"
  FOCUS_FILTER_WORKERS_MODERATES: "Workers Union Moderates"
  FOCUS_FILTER_WORKERS_HARDLINERS: "Workers Union Hardliners"
  FOCUS_FILTER_PEOPLES_PARTY: "National Peoples Party"
