AI for okhrana mechanic setup

--- a/localisation/english/PB_country_specific/PB_Russia_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Russia_l_english.yml
@@ -830,6 +830,26 @@
   Russian_America.4.t:0 "Operation Chernoye Zoloto"
   Russian_America.4.d:0 ""
   Russian_America.4.a:0 "We will not give up these lands!"
+  Russian_Okhrana.1.t: "Gathering Intel on Polish Resistance"
+  Russian_Okhrana.1.d: " "
+  Russian_Okhrana.1.a: "Use minimal amount of resources"
+  Russian_Okhrana.1.b: "Use resources with caution"
+  Russian_Okhrana.1.c: "Prepare complex operation"
+  Russian_Okhrana.2.t: "Gathering Intel on Ukrainian Resistance"
+  Russian_Okhrana.2.d: " "
+  Russian_Okhrana.2.a: "$Russian_Okhrana.1.a$"
+  Russian_Okhrana.2.b: "$Russian_Okhrana.1.b$"
+  Russian_Okhrana.2.c: "$Russian_Okhrana.1.c$"
+  Russian_Okhrana.3.t: "Gathering Intel on Baltic Resistance"
+  Russian_Okhrana.3.d: " "
+  Russian_Okhrana.3.a: "$Russian_Okhrana.1.a$"
+  Russian_Okhrana.3.b: "$Russian_Okhrana.1.b$"
+  Russian_Okhrana.3.c: "$Russian_Okhrana.1.c$"
+  Russian_Okhrana.4.t: "Gathering Intel on Finnish Resistance"
+  Russian_Okhrana.4.d: " "
+  Russian_Okhrana.4.a: "$Russian_Okhrana.1.a$"
+  Russian_Okhrana.4.b: "$Russian_Okhrana.1.b$"
+  Russian_Okhrana.4.c: "$Russian_Okhrana.1.c$"
 
   ##########################
   # GUI DESCRIPTIONS
@@ -1220,6 +1240,7 @@
  RUS_Okhrana_Intel_Gain_15_tt: "We will gain £RUS_Okhrana_Intel §C15 Intel§!"
 
  RUS_Okhrana_Intel_requirment_tt: "We have at least £RUS_Okhrana_Resources §G5§! Okhrana Resources, but better rewards are available when we have at least £RUS_Okhrana_Resources §G10§! and £RUS_Okhrana_Resources §G25§! Okhrana Resources"
+ RUS_OKH_monthly_intel_two_tt: "Gain £RUS_Okhrana_Intel §C2 Intel§! monthly"
 
   PB_Okhrana_Timed_Decision:0 "Anti-Russian Agitation"
   PB_Okhrana_Timed_Decision2:0 "Anti-Russian Insurgency Attack"
@@ -1230,7 +1251,7 @@
   RUS_Okhrana_Resources_Forty_tt:0 "We have at least £RUS_Okhrana_Resources §G40§! Okhrana Resources"
   RUS_Okhrana_Resources_Sixty_tt:0 "We have at least £RUS_Okhrana_Resources §G60§! Okhrana Resources"
 
- RUS_Okhrana_has_more_than_0_resistance_tt: "Has more than §Y0 Resistance§!"
+  RUS_Okhrana_has_more_than_0_resistance_tt: "Has more than §Y0 Resistance§!"
 
   PB_RUS_Okhrana_Resource_Monthly_Increase_tt:0 "£RUS_Okhrana_Resources §YOkhrana Monthly Resource§! Gain will §Gincrease§! by §G5§! "
 
