Great Vermont Reich

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -364,7 +364,7 @@
  STATE_355:0 "Samsun"
  STATE_356:0 "Kastamonu"
  STATE_357:0 "Maine"
- STATE_358:0 "New York"
+ STATE_358:0 "Niagara"
  STATE_359:0 "New Jersey"
  STATE_360:0 "Pennsylvania"
  STATE_361:0 "Maryland"
