More ordered changes to Vermont Reich

--- a/localisation/english/PB_country_specific/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_United_Commonwealth_l_english.yml
@@ -2499,7 +2499,7 @@ AME_Blackmail_Dixie_Mayors_Lang_desc:0 "Please quiet down - I need this job!"
 
 AME_Increase_Comp_Virginia:0 "Increase Compliance In Virginia"
 AME_Increase_Comp_Albemarle:0 "Increase Compliance In Albemarle"
-AME_Increase_Comp_Claredon:0 "Increase Compliance In Claredon"
+AME_Increase_Comp_Claredon:0 "Increase Compliance In Jackson"
 AME_Increase_Comp_Georgia:0 "Increase Compliance In Georgia"
 AME_Increase_Comp_Seminolia:0 "Increase Compliance In Seminolia"
 AME_Increase_Comp_West_Florida:0 "Increase Compliance In West Florida"
