--- a/localisation/english/PB_country_specific/PB_SCA_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_SCA_l_english.yml
@@ -415,9 +415,9 @@
   SCA_Core_Georgia_1_desc:0 "Despite our victory over the Commonwealth it seems our initial hopes of being welcomed as the heroes of America that we are has proved to be an utter failure. While we hoped to have a peaceful transition into power it seems that only force, and force alone will quell thos that wish to actively undermine our regime."
   SCA_Core_Georgia_2:0 "Bring Order To Georgia"
   SCA_Core_Georgia_2_desc:0 "Despite our victory over the Commonwealth it seems our initial hopes of being welcomed as the heroes of America that we are has proved to be an utter failure. While we hoped to have a peaceful transition into power it seems that only force, and force alone will quell thos that wish to actively undermine our regime."
-  SCA_Core_Claredon_1:0 "Bring Order To Claredon"
+  SCA_Core_Claredon_1:0 "Bring Order To Jackson"
   SCA_Core_Claredon_1_desc:0 "Despite our victory over the Commonwealth it seems our initial hopes of being welcomed as the heroes of America that we are has proved to be an utter failure. While we hoped to have a peaceful transition into power it seems that only force, and force alone will quell thos that wish to actively undermine our regime."
-  SCA_Core_Claredon_2:0 "Bring Order To Claredon"
+  SCA_Core_Claredon_2:0 "Bring Order To Jackson"
   SCA_Core_Claredon_2_desc:0 "Despite our victory over the Commonwealth it seems our initial hopes of being welcomed as the heroes of America that we are has proved to be an utter failure. While we hoped to have a peaceful transition into power it seems that only force, and force alone will quell thos that wish to actively undermine our regime."
   SCA_Core_Albemarle_1:0 "Bring Order To Albermarle"
   SCA_Core_Albemarle_1_desc:0 "Despite our victory over the Commonwealth it seems our initial hopes of being welcomed as the heroes of America that we are has proved to be an utter failure. While we hoped to have a peaceful transition into power it seems that only force, and force alone will quell thos that wish to actively undermine our regime."
@@ -455,9 +455,9 @@
   SCA_Core_New_Jersey_1_desc:0 "Despite our victory over the Commonwealth it seems our initial hopes of being welcomed as the heroes of America that we are has proved to be an utter failure. While we hoped to have a peaceful transition into power it seems that only force, and force alone will quell thos that wish to actively undermine our regime."
   SCA_Core_New_Jersey_2:0 "Bring Order To New Jersey"
   SCA_Core_New_Jersey_2_desc:0 "Despite our victory over the Commonwealth it seems our initial hopes of being welcomed as the heroes of America that we are has proved to be an utter failure. While we hoped to have a peaceful transition into power it seems that only force, and force alone will quell thos that wish to actively undermine our regime."
-  SCA_Core_Long_Island_1:0 "Bring Order To Long Island"
+  SCA_Core_Long_Island_1:0 "Bring Order To Hamilton"
   SCA_Core_Long_Island_1_desc:0 "Despite our victory over the Commonwealth it seems our initial hopes of being welcomed as the heroes of America that we are has proved to be an utter failure. While we hoped to have a peaceful transition into power it seems that only force, and force alone will quell thos that wish to actively undermine our regime."
-  SCA_Core_Long_Island_2:0 "Bring Order To Long Island"
+  SCA_Core_Long_Island_2:0 "Bring Order To Hamilton"
   SCA_Core_Long_Island_2_desc:0 "Despite our victory over the Commonwealth it seems our initial hopes of being welcomed as the heroes of America that we are has proved to be an utter failure. While we hoped to have a peaceful transition into power it seems that only force, and force alone will quell thos that wish to actively undermine our regime."
   SCA_Core_New_York_1:0 "Bring Order To New York"
   SCA_Core_New_York_1_desc:0 "Despite our victory over the Commonwealth it seems our initial hopes of being welcomed as the heroes of America that we are has proved to be an utter failure. While we hoped to have a peaceful transition into power it seems that only force, and force alone will quell thos that wish to actively undermine our regime."
