--- a/localisation/english/PB_Technologies_l_english.yml
+++ b/localisation/english/PB_Technologies_l_english.yml
@@ -301,8 +301,7 @@
  gunslingers_tech_8_desc:0 "Many gunslingers travel on horseback but there efficiency is questionable at best, at least in terms of discipline. We can integrate their love of speed with traditional cavarly tactics to make them a formidable force."
 
 
- dependencies_x:0 "Is allowed to research this tech"
- dependencies_clone_troopers:0 "Has Completed the Associated Special Project"
+ PB_can_research_gunslingers_tt:0 "Is eligible to research Gunslingers technology"
 
  special_project_primordiform:0 "Primordiform Amalgamates"
  special_project_primordiform_desc:0 "Traditionally, primates or primate adjacent species are avoided when mixing genetics. Frankly this is short-sighted and unimaginative, and thus the Primordiform was born. An unholy union of ape, human and mutated DNA, these armed creatures are exceptional shock cavalry."
