loc+fixes+sp additions
loc by silentking, standardization of spacing tooltips into one and addition of GDR content into russian focus tree

--- a/localisation/english/PB_country_specific/PB_Russia_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Russia_l_english.yml
@@ -1031,8 +1031,11 @@
   PB_RUS_Student_Protests:0 "Deal with the Student Protests"
 
   PB_RUS_Reverse_Alexandrian_Reforms:0 "Reverse the Alexandrian Reforms"
+  PB_RUS_Reverse_Alexandrian_Reforms_desc:0 "Prior to the war, Russia underwent a serious of so called 'reforms'. Aimed at improving the representation of the average Russian citizen within our government, supposedly this would prevent future revolutions. But we see these efforts for what they truly are, an attempt to undermine the Empire. Peasents and workers have no place in government, and allowing them to decide leaders and by extension policy invites Jacobinism into our nation. This is something that cannot be allowed out happen. All trace of these changes will be erased, and a new stable Russia shall arise"
   PB_RUS_Ban_Left_Parties:0 "Put a Finger on the Scales"
+  PB_RUS_Ban_Left_Parties_desc:0 "The war has taught us many things, but it has become clear that even the slightest hint of instability is enough to encourage Jacobin and other Socalist activity within our nation. While many of these groups were tolerated in the past, we cannot allow this to continue. These organisations prose a threat to the continued stability and survival of our Empire. To ensure it doesn't happen again, we will ban such organisations. Preventing any chance of leftist sentiment from taking hold"
   PB_RUS_Resinstate_Press_Controls:0 "Revive State Press Controls"
+  PB_RUS_Resinstate_Press_Controls_desc:0 "During the war, the press was tightly controlled by the state. The news heard by the people spoke only of victory and heroes, not grave defeats and cowards. With the war over, many are hoping this control will be lifted and remain so. And while we will lift some of these restrictions, the media will still remain firmly under the state's control. We will not allow it to be a path for dissent, only stability"
   PB_RUS_Back_to_the_Kitchen:0 "Crack down on the Women's Committees"
   PB_RUS_Meh_on_Feminism:0 "Seen, but Not Heard"
   PB_RUS_Curtail_Regional_Autonomy:0 "Curtail Regional Autonomy"
@@ -1041,6 +1044,7 @@
   PB_RUS_A_United_Russia:0 "The Stoylpinist Legacy Secured"
 
   PB_RUS_Glasnost:0 "Glasnost Policy"
+  PB_RUS_Glasnost_desc:0 "The Alexandiran Reforms of the pre-war regime were an excellent start for our future but they did not go far enough. Rather than remove or replace them, we still expand these reforms through the policy of Glasnost or 'Openness' as it is known in English. We shall grant the people the changes they have desired, like freedom of the press and the right to assembly. We can even grant some improved rights for the women our nation, they have earned them through battle. The Russian Empire will be a free nation"
   PB_RUS_Federalism:0 "Imperial Federalism"
   PB_RUS_Autonomism:0 "Expand the Autonomist Model"
   PB_RUS_Abolish_Gulag:0 "Abolish the Aleutian Islands Sector"
@@ -1142,6 +1146,7 @@
   PB_RUS_The_Dark_Continent_desc:0 "We have chosen our preferred partner in the Horn of Africa. It's time we brought them into our sphere so that we may have a foothold on the African continent."
 
   PB_RUS_The_Guns_Fall_Silent:0 "The Guns Fall Silent"
+  PB_RUS_The_Guns_Fall_Silent_desc:0 "With the last bastions of resistance in Europe crushed, the continent is secured. Our men can finally cheer in victory and dream of home, for the war is over. But as our soldiers finally start to enjoy well earned peace, we must face the future of Russia. Across the Atlantic, the Americas remain a wildcard for our nation, one that must be addressed. Along with the state of our country and its many peoples"
   PB_RUS_The_American_Question:0 "The American Question"
   PB_RUS_The_Philadelphia_Accords:0 "The Philadelphia Accords"
   PB_RUS_The_One_Last_War:0 "One Last War"
@@ -1154,6 +1159,7 @@
   PB_RUS_Empire_Of_The_Slavs:0 "Empire Of The Slavs"
   PB_RUS_Pax_Russica:0 "Pax Russica"
   PB_RUS_Count_The_Dead:0 "Count The Dead"
+  PB_RUS_Count_The_Dead_desc:0 "While many have sung of victory and the coming prosperity, we cannot forget the sacrifices that made it possible. Our economic and some might say even out society have been geared toward war, and now we must transition into one of peace. Conscription will be ended and our economic demobilised, mothers and wifes can finally welcome their sons and husbands home. Whether they arrive in cars or in body bags"
   PB_RUS_Extort_The_Defeated:0 "Extort The Defeated"
   PB_RUS_The_New_World_Order:0 "The New World Order"
   PB_RUS_Fund_The_Promethus_Project:0 "Fund The Promethus Project"
@@ -1760,7 +1766,6 @@
   PB_RUS_Rasputin_Influence_Growth_tt:0 "§RInccrease§! the popularity of the §YRasputinite Cult§! by §Y5%§!.\n"
   PB_RUS_Assassinate_Rasputin_tt:0 "Begin §2Operatsiya Polunoch§!\n"
 
-  PB_RUS_Spacing_tt:0 " \n"
   PB_RUS_Kiev_Max_Infra:0 "Add §Ymaximum§! infrastructure to §YKiev§!"
   RUS_trade_tt:0 "§YTrade Relations§! between Russia-Alaska and the following North American nations will increase by §G+25§!"
   PB_RUS_Sib_Infra_tt:0 "Sets the minimum level of §Yinfrastructure§! for states to §Y2§! and adds an additional building slot to these states\n\n"
@@ -1802,7 +1807,8 @@
   RUS_force_attack:0 "Over The Top"
   PB_RUS_Revert_Naval_Neglect_tt:0 "You can now assign §GNaval Spirits§! in the §YOfficer Corps§! tab"
   PB_RUS_Continue_The_Air_Plan_tt:0 "You can now assign §GAir Spirits§! in the §YOfficer Corps§! tab"
-  PB_RUS_Revert_Naval_Neglect_BB_tt:0 "Creates two production lines of the §HTsar Class§! heavy battleship with each production line starting at §G80%§! completion "
+  PB_RUS_Revert_Naval_Neglect_BB_tt:0 "Creates two production lines of the §HTsar Class§! heavy battleship with each production line starting at §G80%§! completion"
+  PB_RUS_Revert_Naval_Neglect_BB_no_project_tt:0 "Creates two production lines of the §HTsar Class§! heavy battleship with each production line starting at §G30%§! completion"
   PB_RUS_Airbase_Expansion_tt:0 "Every state that has at least one §YAirfield§! at level §Ythree§! or less will receive an §Gadditional airfield§!"
   PB_RUS_Doctrine_Bonus_tt:0 "If you have not already selected a §HLand Doctrine§! add the following:\n"
 
