Democratic Tree final focus work

--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -4112,6 +4112,31 @@ ETR_Insurgency_an_ADJ:0 "Ugyhur"
   RUS_Common_Empire_cn_ADJ:0 "Russian"
   RUS_Common_Empire_an_ADJ:0 "Russian"
 
+  RUS_Slavic_Union_ni:0 "Slavic Empire"
+  RUS_Slavic_Union_ni_DEF:0 "The Empire of the Slavic Peoples"
+  RUS_Slavic_Union_ds:0 "Slavic Empire"
+  RUS_Slavic_Union_ds_DEF:0 "The Empire of the Slavic Peoples"
+  RUS_Slavic_Union_rc:0 "Slavic Empire"
+  RUS_Slavic_Union_rc_DEF:0 "The Empire of the Slavic Peoples"
+  RUS_Slavic_Union_an:0 "Slavic Empire"
+  RUS_Slavic_Union_an_DEF:0 "The Empire of the Slavic Peoples"
+  RUS_Slavic_Union_cn:0 "Slavic Empire"
+  RUS_Slavic_Union_cn_DEF:0 "The Empire of the Slavic Peoples"
+  RUS_Slavic_Union_lb:0 "Slavic Empire"
+  RUS_Slavic_Union_lb_DEF:0 "The Empire of the Slavic Peoples"
+  RUS_Slavic_Union_ss:0 "Slavic Empire"
+  RUS_Slavic_Union_ss_DEF:0 "The Empire of the Slavic Peoples"
+  RUS_Slavic_Union_jc:0 "Slavic Empire"
+  RUS_Slavic_Union_jc_DEF:0 "The Empire of the Slavic Peoples"
+  RUS_Slavic_Union_ni_ADJ:0 "Russian"
+  RUS_Slavic_Union_rc_ADJ:0 "Russian"
+  RUS_Slavic_Union_lb_ADJ:0 "Russian"
+  RUS_Slavic_Union_ss_ADJ:0 "Russian"
+  RUS_Slavic_Union_jc_ADJ:0 "Russian"
+  RUS_Slavic_Union_ds_ADJ:0 "Russian"
+  RUS_Slavic_Union_cn_ADJ:0 "Russian"
+  RUS_Slavic_Union_an_ADJ:0 "Russian"
+
   POL_Uprising_ni:0 "Committee for Polish Liberation"
   POL_Uprising_ni_DEF:0 "The Committee for Polish Liberation"
   POL_Uprising_ds:0 "Free Polish Army"
