new special projects

--- a/localisation/english/modifiers_l_english.yml
+++ b/localisation/english/modifiers_l_english.yml
@@ -2228,9 +2228,9 @@ state_resources_oil_factor: "Local Available £resources_strip|1 Oil"
 
  MODIFIER_SCIENTIST_XP_GAIN_FACTOR: "Scientist XP Gain"
  
- MODIFIER_SCIENTIST_RESEARCH_BONUS_FACTOR: "Research bonus"
+ MODIFIER_SCIENTIST_RESEARCH_BONUS_FACTOR: "Scientist Research bonus"
  MODIFIER_SCIENTIST_RESEARCH_BONUS_FACTOR_tt: " $scientist_research_bonus_factor$: $RIGHT|+=%1$"
- MODIFIER_SCIENTIST_BREAKTHROUGH_BONUS_FACTOR: "Breakthrough bonus"
+ MODIFIER_SCIENTIST_BREAKTHROUGH_BONUS_FACTOR: "Scientist Breakthrough bonus"
  MODIFIER_SCIENTIST_BREAKTHROUGH_BONUS_FACTOR_tt: " $scientist_breakthrough_bonus_factor$: $RIGHT|+=%1$"
 
  MODIFIER_UNDERWAY_REPLENISHMENT_RANGE: "Underway Replenishment Range"
