--- a/localisation/english/PB_Abilities_I_english.yml
+++ b/localisation/english/PB_Abilities_I_english.yml
@@ -8,12 +8,12 @@
   ABILITY_GAS_DEFENSE: "Gas Defense"
   ABILITY_GAS_DEFENSE_DESC: "Your armies will get a defensive bonus at the expense of some disadvantages."
   ABILITY_GAS_DEFENSE_TOOLTIP: "Gas Defense ($LEADER$)"
-  AME_Gas_Defense_tt: "\nUnlocks the §HGas Defense§! ability, which is an improved version of the §YLast Stand§! ability\n\n"
+  PB_Gas_Defense_tt: "\nUnlocks the §HGas Defense§! ability, which is an improved version of the §YLast Stand§! ability\n\n"
 
   ABILITY_GAS_ATTACK: "Gas Assault"
   ABILITY_GAS_ATTACK_DESC: "Your armies will get an offensive bonus and improved attack against fortifications."
   ABILITY_GAS_ATTACK_TOOLTIP: "Gas Assault ($LEADER$)"
-  AME_Gas_Attack_tt: "\nUnlocks the §HGas Assault§! ability, which grants improved attack overall and significantly improved attack  against §YForts§!\n\n"
+  PB_Gas_Attack_tt: "\nUnlocks the §HGas Assault§! ability, which grants improved attack overall and significantly improved attack  against §YForts§!\n\n"
 
   ABILITY_ANNIHILATION: "Annihilation Of The Self"
   ABILITY_ANNIHILATION_DESC: "Not one inch of Prussia shall be ceded to our enemies, we will defend our great nation with everything we've got."
