--- a/localisation/english/PB_equipment_l_english.yml
+++ b/localisation/english/PB_equipment_l_english.yml
@@ -1,5 +1,8 @@
 ﻿l_english:
 
+ EQUIPMENT_DESCRIPTION: "$NAME$"
+ EQUIPMENT_DESCRIPTION_WITH_DESIGNER: "$DESIGNER$ $NAME$"
+
  submarine:0 "Submarine"
  submarine_desc:0 "Submarines employ stealth and powerful torpedoes to destroy enemy convoys."
  both_cruisers_desc:0 "Light Cruiser - A light screening vessel. Its primary duty is to shield capital ships from enemy light ships but can also unleash powerful torpedoes that can hurt bigger ships.\n\nHeavy Crusier - A large armored cruiser that is pretty flexible. A good choice for nations who can't afford to build larger capital ships."
@@ -973,3 +976,120 @@ OUTDATED_EQ:1 "Show §Houtdated equipment§!"
  HOL_EQUIPMENT_VERSION_14:1 "No. 14"
  HOL_EQUIPMENT_VERSION_15:1 "No. 15"
  HOL_EQUIPMENT_VERSION_16:1 "No. 16"
+
+
+  ###SPECIAL PROJECTS - armopred engineers
+ armored_support_vehicle: "Armored Support Vehicle"
+ armored_support_vehicle_desc: "These versatile vehicles provide essential battlefield support and mobility under armored protection." 
+ armored_support_vehicle_1: "Armored Support Vehicle"
+
+ motorbike_equipment: "Military Motorcycle"
+ motorbike_equipment_desc: "Fast and versatile, military motorbikes are often equipped with sidecars and mounted machine guns to serve as reconnaissance, communication and rapid-response units."
+ motorbike_equipment_1: "Military Motorcycle"
+
+ light_tank_land_cruiser_equipment: "Light Land Cruiser"
+
+ super_heavy_artillery_equipment: "Super-Heavy Howitzer"
+ super_heavy_artillery_equipment_short: "SH. Howitzer"
+ super_heavy_artillery_equipment_desc: "$sp_land_self_propelled_super_heavy_howitzer_desc$"
+ super_heavy_artillery_equipment_1: "Super-Heavy Howitzer"
+ super_heavy_artillery_equipment_1_short: "SH. Howitzer"
+ super_heavy_artillery_equipment_1_desc: "$sp_land_self_propelled_super_heavy_howitzer_desc$"
+
+ self_propelled_super_heavy_artillery_equipment: "Self-Propelled Super-Heavy Howitzer"
+ self_propelled_super_heavy_artillery_equipment_short: "SP. SH. Howitzer"
+ self_propelled_super_heavy_artillery_equipment_desc: "$sp_land_super_heavy_howitzer_desc$"
+ self_propelled_super_heavy_artillery_equipment_1: "Self-Propelled Super-Heavy Howitzer"
+ self_propelled_super_heavy_artillery_equipment_1_short: "SP. SH. Howitzer"
+ self_propelled_super_heavy_artillery_equipment_1_desc: "$sp_land_super_heavy_howitzer_desc$"
+
+ super_heavy_railway_gun_equipment: "Super-Heavy Railway Gun"
+ super_heavy_railway_gun_equipment_short: "SH. Railway Gun"
+ super_heavy_railway_gun_equipment_desc: "A colossal weapon of unmatched power and precision, which will stand as a testament to relentless pursuit of military superiority of our country."
+ super_heavy_railway_gun_equipment_1: "Super-Heavy Railway Gun"
+ super_heavy_railway_gun_equipment_1_short: "SH. Railway Gun"
+ super_heavy_railway_gun_equipment_1_desc: "A colossal weapon of unmatched power and precision, which will stand as a testament to relentless pursuit of military superiority of our country."
+ GER_super_heavy_railway_gun_equipment_1: "Dora"
+ ITA_super_heavy_railway_gun_equipment_1: "Cannone da 381/40 AVS"
+ ENG_super_heavy_railway_gun_equipment_1: "BL 18 inch"
+ USA_super_heavy_railway_gun_equipment_1: "14 inch M1920"
+ FRA_super_heavy_railway_gun_equipment_1: "Obusier de 520"
+
+ explosive_ammo_equipment: "$mega_gun_emplacement$"
+ explosive_ammo_equipment_short: "$mega_gun_emplacement$"
+ explosive_ammo_equipment_desc: "A high-explosive projectile that can be fired from a Large Caliber Multi-Charge Gun, capable of reaching targets at very long range."
+ explosive_ammo_equipment_1: "$mega_gun_emplacement$"
+ explosive_ammo_equipment_1_short: "$mega_gun_emplacement$"
+ explosive_ammo_equipment_1_desc: "A high-explosive projectile that can be fired from a Large Caliber Multi-Charge Gun, capable of reaching targets at very long range."
+
+ land_cruiser_equipment: "Land Cruiser"
+ land_cruiser_equipment_desc: "$land_cruiser_chassis_desc$"
+ land_cruiser_equipment_1: "Land Cruiser"
+ land_cruiser_equipment_1_short: "Land Cruiser"
+ land_cruiser_equipment_1_desc: "$land_cruiser_chassis_desc$"
+ GER_land_cruiser_equipment_1: "Landkreuzer P.1000 Ratte"
+ GER_land_cruiser_equipment_1_short: "Ratte"
+ GER_land_cruiser_equipment_1_desc: "The P.1000 Ratte was a German concept for a super-heavy tank developed during World War II. Proposed by Krupp in 1942, the design envisioned a 1000-ton armored behemoth armed with two 280mm naval guns, multiple secondary weapons, and armor up to 360mm thick. The Ratte was intended to serve as a mobile fortress capable of overwhelming any battlefield opposition. However, due to its immense size, high fuel consumption, and logistical impracticalities, the project was deemed unfeasible and was ultimately canceled in 1943."
+
+ helicopter_equipment: "Helicopter"
+ helicopter_equipment_short: "Helicopter"
+ helicopter_equipment_desc: "A flying craft that relies on rapidly spinning rotors rather than wings and forward momentum. This means it can hover in place, and has more control over vertical changes in height."
+ helicopter_equipment_1: "Helicopter"
+ helicopter_equipment_1_short: "Helicopter"
+ helicopter_equipment_1_desc: "A flying craft that relies on rapidly spinning rotors rather than wings and forward momentum. This means it can hover in place, and has more control over vertical changes in height."
+
+ 
+ strat_bomber_intercontinental_equipment: "Intercontinental Bomber"
+ strat_bomber_intercontinental_equipment_short: "ITC Bomber"
+ strat_bomber_intercontinental_equipment_desc: "A giant aircraft specifically designed for ultra-long range missions, intended to enable strategic bombing across contimemts."
+ strat_bomber_intercontinental_equipment_1: "Intercontinental Bomber"
+ strat_bomber_intercontinental_equipment_1_short: "ITC Bomber"
+ strat_bomber_intercontinental_equipment_1_desc: "A giant aircraft specifically designed for ultra-long range missions, intended to enable strategic bombing across contimemts."
+
+ mothership_equipment: "Mothership Aircraft"
+ mothership_equipment_short: "Mothership Aircraft"
+ mothership_equipment_desc: "A very large plane that carries several fighter planes into combat, allowing for further reach than would normally be possible. The carrier of the sky."
+ mothership_equipment_0:  "Mothership Aircraft"
+ mothership_equipment_0_short: "Mothership Aircraft"
+ mothership_equipment_0_desc: "A very large plane that carries several fighter planes into combat, allowing for further reach than would normally be possible. The carrier of the sky."
+
+
+
+ guided_missile_equipment:0 "Guided Missile"
+ guided_missile_equipment_1:0 "Basic Guided Missile"
+ guided_missile_equipment_1_short:0 "Guided Missile I"
+ guided_missile_equipment_1_desc:0 "Unmanned flying bomb"
+ guided_missile_equipment_2:0 "Improved Guided Missile"
+ guided_missile_equipment_2_short:0 "Guided Missile II"
+ guided_missile_equipment_2_desc:0 "Better unmanned flying bomb"
+ guided_missile_equipment_3:0 "Advanced Guided Missile"
+ guided_missile_equipment_3_short:0 "Guided Missile III"
+ guided_missile_equipment_3_desc:0 "Best unmanned flying bomb"
+ ballistic_missile: "Ballistic Missile"
+ ballistic_missile_equipment: "Ballistic Missile"
+ ballistic_missile_equipment_short: "Ballistic Missile"
+ ballistic_missile_equipment_desc: "An unmanned ballistic missile for strategic bombing"
+ ballistic_missile_equipment_1: "Basic Ballistic Missile"
+ ballistic_missile_equipment_1_short: "Ballistic Missile I"
+ ballistic_missile_equipment_1_desc: "An unmanned ballistic missile for strategic bombing"
+ ballistic_missile_equipment_2: "Medium Range Ballistic Missile"
+ ballistic_missile_equipment_2_short: "MRBM"
+ ballistic_missile_equipment_2_desc: "An improved unmanned ballistic missile for strategic bombing"
+ ballistic_missile_equipment_3: "Intercontinental Ballistic Missile"
+ ballistic_missile_equipment_3_short: "ICBM"
+ ballistic_missile_equipment_3_desc: "A long range unmanned ballistic missile for strategic bombing"
+
+ nuclear_missile: "Nuclear Missile"
+ nuclear_missile_equipment: "Nuclear Ballistic Missile"
+ nuclear_missile_equipment_1: "Medium Range Nuclear Missile"
+ nuclear_missile_equipment_1_short: "Nuclear Missile I"
+ nuclear_missile_equipment_1_desc: "A medium range ballistic missile capable of carrying a nuclear warhead"
+ nuclear_missile_equipment_2: "Intercontinental Nuclear Missile"
+ nuclear_missile_equipment_2_short: "ICBM"
+ nuclear_missile_equipment_2_desc: "A long range ballistic missile capable of carrying a nuclear warhead"
+ thermonuclear_bombs: "Thermonuclear Bombs"
+
+ sam_missile: "Surface-to-Air Missile"
+ sam_missile_equipment: "Surface-to-Air Missile"
+ sam_missile_equipment_short: "SAM"
+ sam_missile_equipment_desc: "A rocket intended to quickly climb to reach enemy bombers, and explode in their close proximity."
