WIP pax landmarks

--- a/localisation/english/PB_buildings_l_english.yml
+++ b/localisation/english/PB_buildings_l_english.yml
@@ -101,3 +101,56 @@
  fuel_silo:0 "Fuel Silo"
  fuel_silo_plural:0 "Fuel Silos"
  fuel_silo_desc:0 "This building provides your nation with more room for stockpiling §HFuel§!."
+
+### LANDMARKS ###
+# please keep the same order as in PB_landmarks.txt
+
+ landmark_big_ben_pax: "Big Ben"
+ landmark_big_ben_pax_plural: "$landmark_big_ben_pax$"
+ landmark_big_ben_desc: " "
+
+ landmark_imperialhalle: "Imperialhalle"
+ landmark_imperialhalle_plural: "$landmark_imperialhalle$"
+ landmark_imperialhalle_desc: " "
+
+ landmark_charlemagne_monument: "Monument of Charlemagne"
+ landmark_charlemagne_monument_plural: "$landmark_charlemagne_monument$"
+ landmark_charlemagne_monument_desc: " "
+
+ landmark_colossus_of_liberty: "Colossus of Liberty"
+ landmark_colossus_of_liberty_plural: "$landmark_colossus_of_liberty$"
+ landmark_colossus_of_liberty_desc: " "
+
+ landmark_joanne_darc_monument: "Joanne d'Arc Monument"
+ landmark_joanne_darc_monument_plural: "$landmark_joanne_darc_monument$"
+ landmark_joanne_darc_monument_desc: " "
+
+ landmark_colosseum_pax: "Colosseum"
+ landmark_colosseum_pax_plural: "$landmark_colosseum_pax$"
+ landmark_colosseum_pax_desc: " "
+
+ landmark_kremlin_pax: "Kremlin"
+ landmark_kremlin_pax_plural: "$landmark_kremlin_pax$"
+ landmark_kremlin_pax_desc: " "
+
+ landmark_winter_palace: "Winter Palace"
+ landmark_winter_palace_plural: "$landmark_winter_palace$"
+ landmark_winter_palace_desc: " "
+
+ landmark_hagia_sophia: "Hagia Sophia"
+ landmark_hagia_sophia_plural: "$landmark_hagia_sophia$"
+ landmark_hagia_sophia_desc: " "
+
+ landmark_statue_of_columbia: "Statue of Columbia"
+ landmark_statue_of_columbia_plural: "$landmark_statue_of_columbia$"
+ landmark_statue_of_columbia_desc: " "
+
+ landmark_imperial_unity_tower: "Imperial Unity Tower"
+ landmark_imperial_unity_tower_plural: "$landmark_imperial_unity_tower$"
+ landmark_imperial_unity_tower_desc: " "
+
+ landmark_forbidden_city: "Forbidden City"
+ landmark_forbidden_city_plural: "$landmark_forbidden_city$"
+ landmark_forbidden_city_desc: " "
+
+
